# edugrad

./: .gitignore  README.md  config.py  main.py  ops.py  optim.py  pyproject.toml  requirements.txt  session.py  setup.py  util.py
.github/workflows/: publish.yml
bcg/: __init__.py  data.py  nn.py  ops.py  optim.py  tensor.py
edugrad/: __init__.py  data.py  nn.py  ops.py  optim.py  tensor.py
examples/toy_half_sum/: main.py  util.py
src/edugrad/: data.py  nn.py  ops.py  optim.py  tensor.py
